feat: create header

--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Home</title>
 </head>
 <body>
     <header>
-        
+        <section class="header">
+            <div class="icon-01">
+                <img src="./images/perfil.png" alt="">
+                <img src="./images/sacola.png" alt="">
+            </div>
+            <div class="icon-02">
+                <img src="./images/seta.png" alt="">
+                <h1>Back</h1>
+            </div>
+        </section>
+        <section class="header-02">
+            <div class="icon-03">
+                <h1>SNEAKERS</h1>
+            </div>
+            <div class="menu">
+            <h1>menu</h1>
+            <img src="./images/barra-de-menu (1).png" alt="">
+            </div>
+        </section>
     </header>
 </body>
 </html>
