feat: create content

--- a/index.html
+++ b/index.html
@@ -28,5 +28,69 @@
             </div>
         </section>
     </header>
+    <main class="main-content">
+        <section class="box-01">
+        <div class="gray-content">
+            <img src="./images/adidas.png" alt="">
+            <div class="line"></div>
+            <div class="text-gray">
+                <h2>Adidas Shoes</h2>
+                <h3>Size: 8.5</h3>
+                <h3>Color: </h3>
+            </div>
+            <div class="text-gray-02">
+                <p>Qty <button class="item-btn">-</button>
+                    <input type="number" value="1" min="1" class="item-input">
+                    <button class="item-btn">+</button> </p>
+                <h3>Price: $540 </h3>
+            </div>
+        </div>
+        <div class="gray-content">
+            <img src="./images/adidas.png" alt="">
+            <div class="line"></div>
+            <div class="text-gray">
+                <h2>Adidas Shoes</h2>
+                <h3>Size: 8.5</h3>
+                <h3>Color: </h3>
+            </div>
+            <div class="text-gray-02">
+                <p>Qty <button class="item-btn">-</button>
+                    <input type="number" value="1" min="1" class="item-input">
+                    <button class="item-btn">+</button> </p>
+                <h3>Price: $540 </h3>
+            </div>
+        </div>
+        <div class="gray-content">
+            <img src="./images/adidas.png" alt="">
+            <div class="line"></div>
+            <div class="text-gray">
+                <h2>Adidas Shoes</h2>
+                <h3>Size: 8.5</h3>
+                <h3>Color: </h3>
+            </div>
+            <div class="text-gray-02">
+                <p>Qty <button class="item-btn">-</button>
+                    <input type="number" value="1" min="1" class="item-input">
+                    <button class="item-btn">+</button> </p>
+                <h3>Price: $540 </h3>
+            </div>
+        </div>
+        <div class="gray-content">
+            <img src="./images/adidas.png" alt="">
+            <div class="line"></div>
+            <div class="text-gray">
+                <h2>Adidas Shoes</h2>
+                <h3>Size: 8.5</h3>
+                <h3>Color: </h3>
+            </div>
+            <div class="text-gray-02">
+                <p>Qty <button class="item-btn">-</button>
+                        <input type="number" value="1" min="1" class="item-input">
+                        <button class="item-btn">+</button> </p>
+                <h3>Price: $540 </h3>
+            </div>
+        </div>
+        </section>
+    </main>
 </body>
 </html>
