feat: create black part

--- a/index.html
+++ b/index.html
@@ -29,67 +29,91 @@
         </section>
     </header>
     <main class="main-content">
-        <section class="box-01">
-        <div class="gray-content">
-            <img src="./images/adidas.png" alt="">
-            <div class="line"></div>
-            <div class="text-gray">
-                <h2>Adidas Shoes</h2>
-                <h3>Size: 8.5</h3>
-                <h3>Color: </h3>
-            </div>
-            <div class="text-gray-02">
-                <p>Qty <button class="item-btn">-</button>
-                    <input type="number" value="1" min="1" class="item-input">
-                    <button class="item-btn">+</button> </p>
-                <h3>Price: $540 </h3>
-            </div>
-        </div>
-        <div class="gray-content">
-            <img src="./images/adidas.png" alt="">
-            <div class="line"></div>
-            <div class="text-gray">
-                <h2>Adidas Shoes</h2>
-                <h3>Size: 8.5</h3>
-                <h3>Color: </h3>
-            </div>
-            <div class="text-gray-02">
-                <p>Qty <button class="item-btn">-</button>
-                    <input type="number" value="1" min="1" class="item-input">
-                    <button class="item-btn">+</button> </p>
-                <h3>Price: $540 </h3>
-            </div>
-        </div>
-        <div class="gray-content">
-            <img src="./images/adidas.png" alt="">
-            <div class="line"></div>
-            <div class="text-gray">
-                <h2>Adidas Shoes</h2>
-                <h3>Size: 8.5</h3>
-                <h3>Color: </h3>
-            </div>
-            <div class="text-gray-02">
-                <p>Qty <button class="item-btn">-</button>
-                    <input type="number" value="1" min="1" class="item-input">
-                    <button class="item-btn">+</button> </p>
-                <h3>Price: $540 </h3>
-            </div>
-        </div>
-        <div class="gray-content">
-            <img src="./images/adidas.png" alt="">
-            <div class="line"></div>
-            <div class="text-gray">
-                <h2>Adidas Shoes</h2>
-                <h3>Size: 8.5</h3>
-                <h3>Color: </h3>
-            </div>
-            <div class="text-gray-02">
-                <p>Qty <button class="item-btn">-</button>
-                        <input type="number" value="1" min="1" class="item-input">
-                        <button class="item-btn">+</button> </p>
-                <h3>Price: $540 </h3>
-            </div>
-        </div>
+        <section class="white">
+            <section class="box-01">
+                <div class="gray-content">
+                    <img src="./images/adidas.png" alt="">
+                    <div class="line"></div>
+                    <div class="text-gray">
+                        <h2>Adidas Shoes</h2>
+                        <h3>Size: 8.5</h3>
+                        <h3>Color: </h3>
+                    </div>
+                    <div class="text-gray-02">
+                        <p>Qty <button class="item-btn">-</button>
+                            <input type="number" value="1" min="1" class="item-input">
+                            <button class="item-btn">+</button> </p>
+                        <h3>Price: $540 </h3>
+                    </div>
+                </div>
+                <div class="gray-content">
+                    <img src="./images/adidas.png" alt="">
+                    <div class="line"></div>
+                    <div class="text-gray">
+                        <h2>Adidas Shoes</h2>
+                        <h3>Size: 8.5</h3>
+                        <h3>Color: </h3>
+                    </div>
+                    <div class="text-gray-02">
+                        <p>Qty <button class="item-btn">-</button>
+                            <input type="number" value="1" min="1" class="item-input">
+                            <button class="item-btn">+</button> </p>
+                        <h3>Price: $540 </h3>
+                    </div>
+                </div>
+                <div class="gray-content">
+                    <img src="./images/adidas.png" alt="">
+                    <div class="line"></div>
+                    <div class="text-gray">
+                        <h2>Adidas Shoes</h2>
+                        <h3>Size: 8.5</h3>
+                        <h3>Color: </h3>
+                    </div>
+                    <div class="text-gray-02">
+                        <p>Qty <button class="item-btn">-</button>
+                            <input type="number" value="1" min="1" class="item-input">
+                            <button class="item-btn">+</button> </p>
+                        <h3>Price: $540 </h3>
+                    </div>
+                </div>
+                <div class="gray-content">
+                    <img src="./images/adidas.png" alt="">
+                    <div class="line"></div>
+                    <div class="text-gray">
+                        <h2>Adidas Shoes</h2>
+                        <h3>Size: 8.5</h3>
+                        <h3>Color: </h3>
+                    </div>
+                    <div class="text-gray-02">
+                        <p>Qty <button class="item-btn">-</button>
+                                <input type="number" value="1" min="1" class="item-input">
+                                <button class="item-btn">+</button> </p>
+                        <h3>Price: $540 </h3>
+                    </div>
+                </div>
+                </section>
+                <div class="Price">
+                    <h2>Total:</h2>
+                    <h2 class="price-text">$2160</h2>
+                </div>
+                <section class="buttons">
+                    <div class="cancel-btn">
+                        <img src="./images/botao-excluir.png" alt="">
+                        <h1>CANCEL DEAL</h1>
+                    </div>
+                    <div class="checkout-btn">
+                        <img src="./images/marca-de-verificacao.png" alt="">
+                        <h1>CHECKOUT</h1>
+                    </div>
+                </section>
+        </section>
+        <section class="black-box">
+            <section class="text-top">
+                <div class="text-checkout">
+                    <h1>Checkout Information</h1>
+                    <div class="line-02"></div>
+                </div>
+            </section>
         </section>
     </main>
 </body>
