feat: create texts and add images

--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@
                     <div class="line-02"></div>
                 </div>
             </section>
+            <section class="second-text">
+                <div class="text-second">
+                    <h1>Pay With</h1>
+                    <div class="line-03"></div>
+                </div>
+            </section>
+            <section class="icons-pagament">
+                
+            </section>
         </section>
     </main>
 </body>
