feat: add card and finish project

--- a/index.html
+++ b/index.html
@@ -121,7 +121,18 @@
                 </div>
             </section>
             <section class="icons-pagament">
-                
+                <div class="icons">
+                    <img src="./images/visa.png" alt="">
+                    <img src="./images/paypal.png" alt="">
+                    <img src="./images/cartao.png" alt="">
+                </div>
+            </section>
+            <section class="card-mastercard">
+                <img src="./images/image.png" alt="">
+            </section>
+            <section class="footer">
+                <h1>Help?</h1>
+                <h1>All Payments Are Secured </h1>
             </section>
         </section>
     </main>
